bundled_metadata/force-app/main/default/objects/StoreAssortment/StoreAssortment.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>