bundled_metadata/force-app/main/default/objects/StoreAssortment/fields/AccountExtId__c.field-meta.xml
<CustomField>
    <fullName>AccountExtId__c</fullName>
    <label>Customer External ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>