bundled_metadata/force-app/main/default/objects/StoreAssortment/fields/Assortment_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Assortment_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Assortment External ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>