bundled_metadata/force-app/main/default/objects/StoreAssortment/fields/AssortmentAssignmentId__c.field-meta.xml
<CustomField>
    <fullName>AssortmentAssignmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assortment Assignment</label>
    <referenceTo>Assortment_Assignment__c</referenceTo>
    <relationshipLabel>Store Assortments</relationshipLabel>
    <relationshipName>Store_Assortments</relationshipName>
    <type>Lookup</type>
</CustomField>