bundled_metadata/force-app/main/default/objects/StoreAssortment/fields/AssortmentExtId__c.field-meta.xml
<CustomField>
    <fullName>AssortmentExtId__c</fullName>
    <externalId>true</externalId>
    <label>Assortment External ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>