bundled_metadata/force-app/main/default/objects/StoreAssortment/fields/Cust_L2__c.field-meta.xml
<CustomField>
    <fullName>Cust_L2__c</fullName>
    <label>L2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>L2_Subchannel</valueSetName>
    </valueSet>
</CustomField>