bundled_metadata/force-app/main/default/objects/StoreAssortment/fields/Cust_L3_snacks__c.field-meta.xml
<CustomField>
    <fullName>Cust_L3_snacks__c</fullName>
    <label>L3 Snacks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricegroup_Cluster_Value_Segmentation</valueSetName>
    </valueSet>
</CustomField>