bundled_metadata/force-app/main/default/objects/StoreAssortment/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Market value from Account record</description>
    <formula>Text(Account.Market__c)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>