bundled_metadata/force-app/main/default/objects/StoreAssortment/listViews/Store_Assortment.listView-meta.xml
<ListView>
    <fullName>Store_Assortment</fullName>
    <columns>Name</columns>
    <columns>Assortment</columns>
    <columns>RetailStore</columns>
    <columns>RetailLocationGroup</columns>
    <columns>Account</columns>
    <columns>IsActive__c</columns>
    <columns>EndDate</columns>
    <columns>Account_External_Id__c</columns>
    <columns>Cust_L3_snacks__c</columns>
    <columns>StartDate</columns>
    <filterScope>Everything</filterScope>
    <label>Store Assortment</label>
</ListView>